--- a/index.html
+++ b/index.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Rock Paper Scissors</title>
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+  <div class="container">
+    <h1>Rock Paper Scissors</h1>
+    <div id="result"></div>
+    <div class="choices">
+      <button class="btn" onclick="play('rock')">Rock</button>
+      <button class="btn" onclick="play('paper')">Paper</button>
+      <button class="btn" onclick="play('scissors')">Scissors</button>
+    </div>
+  </div>
 
-    <button id="rock">Rock</button>
-    <button id="paper">Paper</button>
-    <button id="scissors">Scissors</button>
-
+  <script src="script.js"></script>
 </body>
-<script src="./script.js"></script>
 </html>
